[project]
name = "patch-tuesday-mcp"
version = "0.3.0"
description = "MCP server for Microsoft Patch Tuesday security updates (MSRC Security Update Guide)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "patch-tuesday-mcp contributors"}
]
keywords = ["mcp", "msrc", "patch-tuesday", "security-updates", "cve", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/jonnybottles/patch-tuesday-mcp"
Repository = "https://github.com/jonnybottles/patch-tuesday-mcp"
Issues = "https://github.com/jonnybottles/patch-tuesday-mcp/issues"

[project.optional-dependencies]
telemetry = [
    "azure-monitor-opentelemetry>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
patch-tuesday-mcp = "patch_tuesday_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patch_tuesday_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
